# terminal-banner

./: Cargo.toml  README.md
.github/workflows/: library.yaml
examples/: default.rs  strong.rs
src/: lib.rs  text.rs
tests/: banner.rs  default.txt  strong.txt
